Prettified the report

--- a/email_current.Rmd
+++ b/email_current.Rmd
@@ -1,16 +1,19 @@
 ---
-title: "Madill Mesonet - 10 Day"
+title: "Daily report of previous 10 days of data for the Madill site from Oklahoma Mesonet"
 author: "Mike Proctor"
+date: "`r format(Sys.Date(), '%B %d, %Y')`"
 email: "cowpu2@gmail.com"
 output: 
   html_document:
+    toc: true
+    toc_float: true
     fig_caption: yes
     theme: cerulean
     code_folding: hide
     df_print: paged
 ---
 
-```{r Libraries, include=FALSE}
+```{r Libraries, echo=TRUE, message=FALSE, warning=FALSE}
 library(tidyverse)
 library(lubridate)
 library(magrittr)
@@ -18,30 +21,15 @@ library(rprojroot)
 library("tidylog", warn.conflicts = FALSE)
 library(blastula)
 library(okmesonet)
-
-# 2017-08-06 18:49:19 ------------------------------mdp
-# 2017-12-09 15:58:58 ------------------------------mdp
-# 2018-01-02 20:37:39 ------------------------------mdp
-# 2019-08-11 18:03:09 ------------------------------mdp
-# 2019-08-13 21:43:01 ------------------------------mdp
-# 2020-08-18 21:05:48 ------------------------------mdp
-# 2020-08-19 15:31:04 ------------------------------mdp
-# 2020-09-19 10:03:54 ------------------------------mdp
-# 
+library(plotly)
 
 ```
 
 ---
 output: blastula::blastula_email
 ---
-```{r Run Date, echo=FALSE, message=TRUE, warning=TRUE}
 
-
- now()
-```
-
-
-```{r Get data, echo=FALSE, message=FALSE, warning=FALSE}
+```{r Get data, echo=TRUE, message=FALSE, warning=FALSE}
 
 yesterday <- duration("10 days")  ## Set a period of one day
 today <- duration("1 day")        ## One day for daily pressure
@@ -66,9 +54,10 @@ madill <- okmts(begintime=bgin,   ##   Retrieve specific fields
 madill <- mutate(madill, TEMP = TAIR * 1.8 + 32, PPT = RAIN/25.4, SOIL_5cm = (TS05 * 1.8 + 32))## Convert to fahrenheit and inches
 
 ```
-# Plots...............
 
-```{r Temperature, echo=FALSE, message=FALSE, warning=FALSE}
+
+## Temperature
+```{r Temperature, echo=TRUE, message=FALSE, warning=FALSE}
 
 ##  ======================== Plot TEMP values============================
 ##  Get min values
@@ -91,41 +80,15 @@ ggplot(madill, aes(TIME, TEMP)) +
   scale_x_datetime(date_breaks = "1 day", date_labels = "%b %d") +
   geom_text(data = temp.floor, aes(label = round(TEMP,0)), hjust = 1.5, color = "red") +
   geom_text(data = temp.ceiling, aes(label = round(TEMP,0)), hjust = 1.5, color = "red") +
-  ggtitle(paste0("Temp values for past 10 days @ Madill - ", today()))
+  ggtitle(paste0("Temp values for past 10 days \nMadill - ", now()))
   ggsave("plots/temp_vals.pdf", width = 10, height = 8)
 print(Temp_vals)
 
 ```
 
-```{r Relative Humidity, echo=FALSE, message=FALSE, warning=FALSE}
 
-##  ======================== Plot RH values============================
-## Get min RH values
-min.rh <- madill %>% mutate(day = format(TIME, "%d")) %>%
-  group_by(day) %>%
-  top_n(-1, RELH)
-
-rh.floor <- min.rh %>% distinct(RELH, .keep_all = TRUE)
-## Get max RH values
-max.rh <- madill %>% mutate(day = format(TIME, "%d")) %>%
-  group_by(day)                    %>%
-  top_n(1, RELH)
-
-rh.ceiling <- max.rh %>% distinct(RELH, .keep_all = TRUE)
-
-RH_vals <- 
-ggplot(madill, aes(TIME, RELH)) +
-  geom_line(color = "green", size = 1) +
-  scale_x_datetime(date_breaks = "1 day", date_labels = "%b %d") +
-  geom_text(data = rh.floor, aes(label = round(RELH,0)), hjust = 1.5, color = "blue") +
-  geom_text(data = rh.ceiling, aes(label = round(RELH,0)), hjust = 1.5, color = "black") +
-  ggtitle(paste0("RH values for past 10 days @ Madill - ", today()))
-  ggsave("plots/rh_vals.pdf", width = 10, height = 8)
-print(RH_vals)
-
-```
-
-```{r Precipitation, echo=FALSE, message=FALSE, warning=FALSE}
+## Preciptation
+```{r Precipitation, echo=TRUE, message=FALSE, warning=FALSE}
 
 ##  ======================== Plot PPT values============================
 
@@ -147,48 +110,83 @@ ggplot(ppt.rain, aes(TIME, PPT)) +
   #                                    label = round(PPT,2),
   #                                    hjust = 1.2,
   #                                    vjust = -0.8),color = "blue") +
-  ggtitle(paste0("Precipitation for past 10 days @ Madill - ", today()))
+  ggtitle(paste0("Precipitation for past 10 days \nMadill - ", now()))
   ggsave("plots/ppt_vals.pdf", width = 10, height = 8)
 print(PPT_vals)
 ```
 
 
-```{r Barometric Pressure and Soil Temperatures, echo=FALSE, message=FALSE, warning=FALSE}
+## Humidity  
+```{r Relative Humidity, echo=TRUE, message=FALSE, warning=FALSE}
+
+## Get min RH values
+min.rh <- madill %>% mutate(day = format(TIME, "%d")) %>%
+  group_by(day) %>%
+  top_n(-1, RELH)
+
+rh.floor <- min.rh %>% distinct(RELH, .keep_all = TRUE)
+## Get max RH values
+max.rh <- madill %>% mutate(day = format(TIME, "%d")) %>%
+  group_by(day)                    %>%
+  top_n(1, RELH)
+
+rh.ceiling <- max.rh %>% distinct(RELH, .keep_all = TRUE)
+
+RH_vals <- 
+ggplot(madill, aes(TIME, RELH)) +
+  geom_line(color = "green", size = 1) +
+  scale_x_datetime(date_breaks = "1 day", date_labels = "%b %d") +
+  geom_text(data = rh.floor, aes(label = round(RELH,0)), hjust = 1.5, color = "blue") +
+  geom_text(data = rh.ceiling, aes(label = round(RELH,0)), hjust = 1.5, color = "black") +
+  ggtitle(paste0("RH values for past 10 days \nMadill - ", now()))
+  ggsave("plots/rh_vals.pdf", width = 10, height = 8)
+print(RH_vals)
+
+```
+
+
+
+
+## Pressure
+
+```{r Barometric Pressure, echo=TRUE, message=FALSE, warning=FALSE}
 
 ## Current Barometric Pressure - last 24 hrs
 one.day <- madill %>% filter(TIME >= (now() - today))
 
 ggplot(one.day, aes(TIME, PRES)) +
   geom_line(color = "black", size = 0.5) +
-  ggtitle(paste0("Current Barometric Pressure"), max(one.day$TIME))
+  ggtitle(paste0("24hr Barometric Pressure"), max(one.day$TIME))
 
 
 ggplot(madill, aes(TIME, PRES)) +
-  geom_line(color = "black", size = 1.2)
+  geom_line(color = "black", size = 1.2) +
+  ggtitle(paste0("Barometric Pressure for past 10 days \nMadill - ", now()))
 
 minmaxPressure <- madill %>% select(TIME, PRES) %>%
   group_by(day(TIME))
 
 ```   
 
-```{r Pressure value, echo=FALSE, message=FALSE, warning=FALSE, paged.print=TRUE}
+```{r Pressure value, echo=TRUE, message=FALSE, warning=FALSE, paged.print=TRUE}
 pressureTail <- tail(minmaxPressure, 50)
 #print(pressureTail)
 pressureTail
 
 ```
-
-```{r Soil Temps, echo=FALSE, message=FALSE, warning=FALSE}
+## Soil Temperature
+```{r Soil Temps, echo=TRUE, message=FALSE, warning=FALSE}
 ##  Soil temps
-ggplot(madill, aes(TIME, SOIL_5cm)) +
-  geom_point(color = "brown", size = 1.5)
+soilPlot <- ggplot(madill, aes(TIME, SOIL_5cm)) +
+  geom_point(color = "red", size = 1.5)+
+  ggtitle(paste0("2\" Soil temps for past 10 days \nMadill - ", now()))
+ggplotly(soilPlot)
 
 ```
 
-```{r Wind, echo=FALSE, message=FALSE, warning=FALSE}
 
-##  ======================== Plot WIND values============================
-
+## Wind Velocity 
+```{r Wind, echo=TRUE, message=FALSE, warning=FALSE}
 ## Get max WIND values
 max.wspd <- madill %>% mutate(day = format(TIME, "%d")) %>%
   group_by(day)                    %>%
@@ -205,9 +203,12 @@ ggplot(madill, aes(TIME, WSPD)) +
                                      label = WMAX,
                                      hjust = 1.2,
                                      vjust = -0.8),color = "blue") +
-  ggtitle(paste0("Wind values for past 10 days @ Madill - ", today()))
+  ggtitle(paste0("Wind values for past 10 days \nMadill - ", now()))
+```
 
-##  ##################  Wind Velocity plots  ###################################
+
+## Wind Direction and Counts
+```{r Wind direction, echo=TRUE, message=FALSE, warning=FALSE}
 ##  Breaks and labels for plots
 brks <- c(0, 45, 90, 135, 180, 225, 270, 315, 360)
 lbls <- c("N", "NE", "E", "SE", "S", "SW", "W", "NW")
@@ -223,12 +224,12 @@ wind <- madill %>%   ##  Set up bins, rotate coord system, and summarise
   summarise(dir.count = n(), med.spd = median(WSPD), avg = mean(WSPD))
 ##  Histogram of wind data
 wind.bar <- ggplot(wind, aes(dir.bin, dir.count, fill = avg)) +
-              geom_histogram(stat = "identity", binwidth = 1) +
+              geom_histogram(stat = "identity") +
               scale_fill_distiller(palette = "Reds")
 wind.bar
 ##  Wind.rose of wind data
 wind.rose <- ggplot(wind, aes(dir.bin, dir.count, fill = avg)) +
-              geom_histogram(stat = "identity", binwidth = 1) +
+              geom_histogram(stat = "identity") +
               scale_fill_distiller(palette = "Reds") +
               coord_polar(start = -(22.5 * pi/180)) +
               theme(axis.title.x = element_blank(), axis.title.y = element_blank()) +
